# shared-open-metadata-as-critical-ai-infrastructure

./: .gitignore  README.md  index.html  main.py  pyproject.toml  pyscript.json
data/: random-100-works.jsonl  random-instances.jsonl
doc/: ai-agents.md  blue-core-ai-agents.md  blue-core-graph-rag.md  blue-core-graph-services.md  blue-core-mcp-server.md  extinction-ai.md  final-thoughts-cautious-optimism.md  final-thoughts.md  glam-graphs.md  glam-token-affirmation.md  graph-rag.md  intro-blue-core.md  llms-hallucinations.md  narrative.md  open-metadata.md  people-as-ai-eyelash-mite.md  people-as-ai-mitochondria.md  rag.md  references.md  token-affirmation.md  welcome.md
notebooks/: dedup-agent-demo.ipynb  milvus-triples-vector-db.ipynb  topics.ipynb
notebooks/.ipynb_checkpoints/: topics-checkpoint.ipynb
