[project]
name = "dcmi-2025-shared-open-metadata-as-critical-ai-infrastructure"
version = "0.1.0"
description = "Talk proposal and "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bluecore-models>=0.9.4",
    "pydantic-ai>=1.2.1",
    "pymilvus[milvus-lite,model]>=2.6.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
]
